[CDAP-13778] Disable deleting profile if its still enabled in profile action popover + Fixes textoverflow within the confirmation modal

--- a/cdap-ui/app/cdap/components/Cloud/Profiles/ActionsPopover/ActionsPopover.scss
+++ b/cdap-ui/app/cdap/components/Cloud/Profiles/ActionsPopover/ActionsPopover.scss
@@ -41,6 +41,10 @@
       li.delete-action {
         color: $red-02;
       }
+      li.disabled {
+        cursor: not-allowed;
+        opacity: 0.5;
+      }
     }
 
     .popper__arrow {
